Se termino de corregir el error de conexión a la BD dbPartner